--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
   margin-top: 3em;
 }
 
-
 button {
   width: 10em;
   height: 3em;
@@ -74,4 +73,10 @@ button.reset {
 .message {
   color: #404041;
   font-size: 1em;
+}
+
+.error-message {
+  color: #FF0000;
+  font-size: 1em;
+  margin-top: 1em;
 }
