--- a/style.css
+++ b/style.css
@@ -20,18 +20,53 @@ body {
   display: inline;
 }
 
+.min {
+  text-align: center;
+  width: 15em;
+  height: 3em;
+  margin-right: 20px;
+  margin-top: 2em;
+}
+
+.max {
+  text-align: center;
+  width: 15em;
+  height: 3em;
+  margin-left: 20px;
+}
+
+.set-range {
+  margin-top: 1em;
+}
+
+button.set {
+  background-color: #ED458B;
+}
+
+.range-message {
+  font-size: 1.5em;
+  margin-top: 0.5em;
+}
+
+.error-message {
+  color: #FF0000;
+  font-size: 1em;
+  margin-top: 3em;
+  margin-bottom: 0.5em
+}
+
 .input-field {
-  margin-top: 5em;
+  margin-top: 1em;
 }
 
 .input {
   text-align: center;
   width: 20em;
-  height: 5em;
+  height: 4em;
 }
 
 .buttons {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 button {
@@ -51,13 +86,16 @@ button.clear {
   margin-left: 50px;
 }
 
-button.reset {
-  width: 26.5em;
-  margin-top: 100px;
+button:hover {
+  background-color: #EB008B;
+}
+
+button:disabled {
+  background-color: #D0D2D3
 }
 
 .recent-guess-container {
-  margin-top: 50px;
+  margin-top: 2.5em;
 }
 
 .it-was {
@@ -75,8 +113,7 @@ button.reset {
   font-size: 1em;
 }
 
-.error-message {
-  color: #FF0000;
-  font-size: 1em;
-  margin-top: 1em;
+button.reset {
+  width: 26.5em;
+  margin-top: 2.5em;
 }
